@startuml

title __CREATEPROFILE's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.editProfile {
      namespace createProfile {
        class com.architectica.socialcomponents.main.editProfile.createProfile.CreateProfileActivity {
            {static} + LARGE_IMAGE_URL_EXTRA_KEY : String
            + createPresenter()
            + onCreateOptionsMenu()
            + onOptionsItemSelected()
            + setDefaultProfilePhoto()
            # initContent()
            # onCreate()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.editProfile {
      namespace createProfile {
        class com.architectica.socialcomponents.main.editProfile.createProfile.CreateProfilePresenter {
            + buildProfile()
            # onProfileUpdatedSuccessfully()
            ~ CreateProfilePresenter()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.editProfile {
      namespace createProfile {
        interface com.architectica.socialcomponents.main.editProfile.createProfile.CreateProfileView {
            {abstract} + setDefaultProfilePhoto()
        }
      }
    }
  }
  

  com.architectica.socialcomponents.main.editProfile.createProfile.CreateProfileActivity .up.|> com.architectica.socialcomponents.main.editProfile.createProfile.CreateProfileView
  com.architectica.socialcomponents.main.editProfile.createProfile.CreateProfileActivity -up-|> com.architectica.socialcomponents.main.editProfile.EditProfileActivity
  com.architectica.socialcomponents.main.editProfile.createProfile.CreateProfilePresenter -up-|> com.architectica.socialcomponents.main.editProfile.EditProfilePresenter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
